z-index fixed

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -8,7 +8,8 @@
     align-items: center;
     justify-content: space-between;
     padding: 10px 20px;
-    background-color: #4f4d4d; /* Background color of the navbar */
+    background-color: #4f4d4d;
+    z-index: 1000;
   }
 
 .nav-left {
