--- a/public/styles.css
+++ b/public/styles.css
@@ -98,7 +98,6 @@ section h3 {
   
   /* Position the tooltip */
   position: absolute;
-  z-index: 1;
   top: 100%;
   left: 50%;
   margin-left: -60px;
